--- a/BreezingHealth/res/values/strings.xml
+++ b/BreezingHealth/res/values/strings.xml
@@ -2,14 +2,14 @@
 <resources>
 
     <string name="app_name">微风健康</string>
-    
+
     <string name="edittext_hint_username">用户名</string>
     <string name="edittext_hint_born_date">出生日期</string>
     <string name="edittext_hint_age">年龄</string>
     <string name="edittext_hint_height">身高</string>
     <string name="edittext_hint_weight">体重</string>
     <string name="edittext_hint_hope_weight">期望达到的体重</string>
-    
+
     <string name="title_fillin_personal_information">填写个人资料</string>
     <string name="title_select_born_date">选择出生日期</string>
     <string name="title_select_weight">选择体重</string>
@@ -18,10 +18,11 @@
     <string name="title_select_job_type">选择工作类型</string>
     <string name="title_weight_test_result">体重:175斤</string>
     <string name="date_test">2013年4月21日</string>
-    
+
     <string name="textview_title_sex">性别:</string>
     <string name="textview_title_job_type">工作类型:</string>
-    
+    <string name="textview_title_unit">单位</string>
+
     <string name="male">男</string>
     <string name="female">女</string>
     <string name="submit">提交</string>
@@ -46,6 +47,22 @@
     <string name="refresh">刷新</string>
     <string name="on_discovery_bluetooth">正在搜索蓝牙</string>
     <string name="on_opening_bluetooth">正在开启蓝牙</string>
+        
+    <string name ="height_type">身高</string>
+    <string name ="weight_type">体重</string>
+    <string name ="distance_type">跑步</string>
+
+    <string name = "weight_jin">斤</string>
+    <string name = "weight_kilo">公斤</string>
+    <string name = "weight_pound">磅</string>
+
+    <string name = "longtime_sitting">久坐</string>
+    <string name = "low_activity" >轻度运动</string>
+    <string name = "activity">活动</string>
+    <string name = "often_activity">常活动</string>
+
+    <string name = "info_prompt">您好，请输入</string>
+    <string name = "data_error">数据库保存发生错误！</string>
     
     <string name="settings">设置</string>
     <string name="share">分享</string>
