add left function activities

--- a/BreezingHealth/res/values/strings.xml
+++ b/BreezingHealth/res/values/strings.xml
@@ -9,7 +9,10 @@
     <string name="edittext_hint_height">身高</string>
     <string name="edittext_hint_weight">体重</string>
     <string name="edittext_hint_hope_weight">期望达到的体重</string>
-
+    <string name="edittext_hint_old_password">旧密码</string>
+    <string name="edittext_hint_new_password">新密码</string>
+    <string name="edittext_hint_check_password">确认密码</string>
+    
     <string name="title_fillin_personal_information">填写个人资料</string>
     <string name="title_select_born_date">选择出生日期</string>
     <string name="title_select_weight">选择体重</string>
@@ -68,6 +71,13 @@
     <string name="share">分享</string>
     <string name="history">历史</string>
     <string name="more">更多</string>
+    <string name="name">姓名</string>
+    <string name="sex">性别</string>
+    <string name="age">年龄</string>
+    <string name="job_type">工作类型</string>
+    <string name="height">身高</string>
+    <string name="weight">体重</string>
+    <string name="hope_weight">目标体重</string>
     
     <string name="modify_password">修改密码</string>
     <string name="modify_password_summary">修改您当前账户的密码，保护您的隐私</string>
@@ -77,6 +87,26 @@
     <string name="unit_settings_summary">设置体重、身高等数值的显示单位</string>
     <string name="bluetooth_device_settings">蓝牙设备设置</string>
     <string name="bluetooth_device_settings_summary">设置Breezing、体重称、计步器等蓝牙设备</string>
+    <string name="share_by_message">短信分享</string>
+    <string name="share_by_message_summary">以短信方式分享软件</string>
+    <string name="share_by_email">邮件分享</string>
+    <string name="share_by_email_summary">以邮件方式分享软件</string>
+    <string name="share_by_other">其他方式</string>
+    <string name="share_by_other_summary">以其他方式分享软件</string>
+    <string name="user_instructions">使用说明</string>
+    <string name="user_instructions_summary">教你如何使用微风健康客户端</string>
+    <string name="about_us">关于软件</string>
+    <string name="about_us_summary">了解更多关于软件的信息</string>
+    <string name="related_links">相关链接</string>
+    <string name="related_links_summary">教你如何使用微风健康客户端</string>
     <string name="account_detail">账户详情</string>
+    
+    <string name="height_unit">身高单位</string>
+    <string name="weight_unit">体重单位</string>
+    <string name="distance_unit">距离单位</string>
+    
+    <string name="my_breezing">Breezing</string>
+    <string name="my_pedometer">计步器</string>
+    <string name="my_weighing_scale">体重秤</string>
 
 </resources>
