--- a/BreezingHealth/res/values/strings.xml
+++ b/BreezingHealth/res/values/strings.xml
@@ -12,14 +12,18 @@
     <string name="edittext_hint_old_password">旧密码</string>
     <string name="edittext_hint_new_password">新密码</string>
     <string name="edittext_hint_check_password">确认密码</string>
-
+    <string name="edittext_hint_exercise_amount">输入运动量</string>
+    
     <string name="title_fillin_personal_information">填写个人资料</string>
     <string name="title_select_born_date">选择出生日期</string>
     <string name="title_select_weight">选择体重</string>
     <string name="title_select_hope_weight">选择目标体重</string>
+    <string name="title_select_chart_model">选择模式</string>
     <string name="title_select_height">选择身高</string>
     <string name="title_select_job_type">选择工作类型</string>
+    <string name="title_select_interval">选择时间周期</string>
     <string name="title_weight_test_result">体重:175斤</string>
+    <string name="title_total_exercise_caloric">总计：</string>
     <string name="date_test">2013年4月21日</string>
 
     <string name="textview_title_sex">性别:</string>
@@ -50,7 +54,8 @@
     <string name="refresh">刷新</string>
     <string name="on_discovery_bluetooth">正在搜索蓝牙</string>
     <string name="on_opening_bluetooth">正在开启蓝牙</string>
-
+    <string name="detail">详情</string>
+        
     <string name ="height_type">身高</string>
     <string name ="weight_type">体重</string>
     <string name ="distance_type">跑步</string>
@@ -65,7 +70,6 @@
     <string name = "often_activity">常活动</string>
 
     <string name = "info_prompt">您好，请输入</string>
-
     <string name = "data_error">数据库保存发生错误！</string>
 
     <string name = "input_infomation" >输入信息是：能量代谢值为 %1$d 基本运动能值为 %2$d 消化能值为 %3$d</string>
@@ -88,7 +92,7 @@
     <string name="height">身高</string>
     <string name="weight">体重</string>
     <string name="hope_weight">目标体重</string>
-
+    
     <string name="modify_password">修改密码</string>
     <string name="modify_password_summary">修改您当前账户的密码，保护您的隐私</string>
     <string name="account_management">账户管理</string>
@@ -110,14 +114,37 @@
     <string name="related_links">相关链接</string>
     <string name="related_links_summary">教你如何使用微风健康客户端</string>
     <string name="account_detail">账户详情</string>
-
+    
     <string name="height_unit">身高单位</string>
     <string name="weight_unit">体重单位</string>
     <string name="distance_unit">距离单位</string>
-
+    
     <string name="my_breezing">Breezing</string>
     <string name="my_pedometer">计步器</string>
     <string name="my_weighing_scale">体重秤</string>
-
+    <string name="please_choose_share_method">请选择分享方式</string>
+    
+    <string name="input_food_name_keyword">输入食物名称关键字</string>
+    <string name="tag_increase">+</string>
+    <string name="tag_decrease">-</string>
+    <string name="number_zero">0</string>
+    <string name="manual_input_exercise_record">手工输入运动热量代谢</string>
+    <string name="exercise_intensity">运动强度</string>
+    <string name="exercise_type">运动类型</string>
+    <string name="record">记录</string>
+    <string name="consume">消耗</string>
+    <string name="type">类型</string>
+    <string name="kilojoule">千焦</string>
+    
+    <string name="caloric_intake_history">能量摄入历史</string>
+    <string name="caloric_burn_history">能量消耗历史</string>
+    <string name="caloric_balance_history">能量平衡历史</string>
+    
+    <string name="week_chart_model">周模式</string>
+    <string name="month_chart_model">月模式</string>
+    <string name="year_chart_model">年模式</string>
+    <string name="week">周</string>
+    <string name="week_des_first">第</string>
+    
 
 </resources>
