--- a/BreezingHealth/res/values/strings.xml
+++ b/BreezingHealth/res/values/strings.xml
@@ -208,7 +208,7 @@
     <string name="digest_exercise_caloric_burn">消化能量消耗</string>
     <string name="digest_exercise_caloric_burn_notice">*在食物消化过程中消耗的能量</string>
     <string name="other_caloric_burn">其他能量消耗</string>
-    <string name="total_food_intake">摄入总量：%1$s千焦</string>
+    <string name="total_food_intake">摄入总量：%1$s%2$s</string>
     
     <string name = "alert_dialog_ok" >确定</string>
     <string name = "alert_dialog_cancel" >取消</string>
