--- a/BreezingHealth/res/values/strings.xml
+++ b/BreezingHealth/res/values/strings.xml
@@ -77,7 +77,7 @@
 
     <string name = "input_infomation" >输入信息是：能量代谢值为 %1$d 基本运动能值为 %2$d 消化能值为 %3$d</string>
 
-    <string name = "breezing_result" >您&#160;%1$s年%2$s月%3$s日&#160;的能量代谢值是:(单位:千卡)</string>
+    <string name = "breezing_result" >您&#160;%1$s年%2$s月%3$s日&#160;的能量代谢值是</string>
     <string name = "breezing_result_more" >点击查看更多关于\n《运动和健康的饮食有助你提高您的代谢》</string>
     <string name = "kilo_metabolism" >千焦</string>
 
@@ -203,9 +203,9 @@
     <string name="helper_step_three_intro">只需三步，您的新陈代谢便可了如指掌！</string>
     <string name="helper_step_four_intro">随时记录您的饮食材料，让您的健康“有理有据”！</string>
     <string name="begin_breezing_life">开始体验</string>
-    <string name="base_exercise_caloric_burn">日常活动能量消耗:(单位:千卡)</string>
+    <string name="base_exercise_caloric_burn">日常活动能量消耗</string>
     <string name="base_exercise_caloric_burn_notice">*日常生活及工作中的基本能量消耗</string>
-    <string name="digest_exercise_caloric_burn">消化能量消耗:(单位:千卡)</string>
+    <string name="digest_exercise_caloric_burn">消化能量消耗</string>
     <string name="digest_exercise_caloric_burn_notice">*在食物消化过程中消耗的能量</string>
     <string name="other_caloric_burn">其他能量消耗</string>
     <string name="total_food_intake">摄入总量：%1$s%2$s</string>
@@ -255,7 +255,7 @@
     <string name="modify_unit_failure">修改单位失败</string>
     <string name="please_select_unit">请选择单位</string>
     
-    <string name = "last_breezing_test_result" >于&#160;%1$s年%2$s月%3$s日&#160;的能量代谢值是:(单位:千卡)</string>
+    <string name = "last_breezing_test_result" >于&#160;%1$s年%2$s月%3$s日&#160;的能量代谢值是</string>
     <string name="hour">时</string>
     <string name="minite">分</string>
     <string name="second">秒</string>
@@ -268,9 +268,5 @@
     
     <string name="current_weight_title">当前体重:</string>
    <string name="expected_weight_title">期望体重:</string>
-   
-   <string name="modify_avatar_success">修改头像成功</string>
-    <string name="modify_avatar_failure">修改头像失败</string>
-    <string name="saving_image">图片保存中，请稍候</string>
     
 </resources>
